Refactoring - unify modules packages & modules paths